[gd_scene load_steps=3 format=3 uid="uid://bv3jjkqkmgmm1"]

[ext_resource type="Theme" uid="uid://c0figasdpxdvo" path="res://assets/text.tres" id="1_b2vep"]
[ext_resource type="Script" path="res://main_tab/manager.gd" id="1_x1kcx"]

[node name="Manager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1kcx")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 3
size = Vector2i(1304, 180)
current_screen = 0
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
show_hidden_files = true
use_native_dialog = true

[node name="Path" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -233.0
offset_right = 565.0
offset_bottom = -81.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Path"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Path/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Path/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_b2vep")
theme_override_font_sizes/font_size = 30
text = "Please enter the path to Bloodthief if it was not detected:"

[node name="MarginContainer" type="MarginContainer" parent="Path/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 30

[node name="Open file dialogue" type="Button" parent="Path/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
focus_mode = 0
text = "Open
filesystem"

[node name="Path" type="Label" parent="Path/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_b2vep")
theme_override_font_sizes/font_size = 25
text = "Path not detected, please enter it yourself"

[node name="Manage mod loader" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 355
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 320

[node name="HBoxContainer" type="HBoxContainer" parent="Manage mod loader"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 200

[node name="VBoxContainer" type="VBoxContainer" parent="Manage mod loader/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="remove_ mod_loader" type="Button" parent="Manage mod loader/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("1_b2vep")
theme_override_colors/font_color = Color(1, 0.976471, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Disable mod loader"

[node name="enable_ mod_loader" type="Button" parent="Manage mod loader/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("1_b2vep")
theme_override_colors/font_color = Color(1, 0.976471, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Enable mod loader"

[node name="install_mod_loader" type="Button" parent="Manage mod loader/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("1_b2vep")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Install mod loader"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 686.0
offset_top = 579.0
offset_right = 726.0
offset_bottom = 602.0
theme = ExtResource("1_b2vep")
text = "..."

[node name="load_game" type="Button" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 736.0
offset_right = 176.0
offset_bottom = 799.0
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("1_b2vep")
theme_override_colors/font_color = Color(1, 0.976471, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Launch Game"

[node name="load_game_console" type="Button" parent="."]
layout_mode = 2
offset_left = 192.0
offset_top = 736.0
offset_right = 491.0
offset_bottom = 799.0
size_flags_horizontal = 3
tooltip_text = "Disabled for now"
focus_mode = 0
theme = ExtResource("1_b2vep")
theme_override_colors/font_color = Color(1, 0.976471, 1, 1)
theme_override_font_sizes/font_size = 25
disabled = true
text = "Launch Game w/ Console"

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="button_up" from="Path/VBoxContainer/HBoxContainer/MarginContainer/Open file dialogue" to="." method="_on_open_file_dialogue_button_up"]
[connection signal="button_up" from="Manage mod loader/HBoxContainer/VBoxContainer/remove_ mod_loader" to="." method="_on_remove__mod_loader_button_up"]
[connection signal="button_up" from="Manage mod loader/HBoxContainer/VBoxContainer/enable_ mod_loader" to="." method="_on_enable__mod_loader_button_up"]
[connection signal="button_up" from="Manage mod loader/HBoxContainer/install_mod_loader" to="." method="_on_install_mod_loader_button_up"]
[connection signal="button_up" from="load_game" to="." method="_on_load_game_button_up"]
[connection signal="button_up" from="load_game_console" to="." method="_on_load_game_console_button_up"]
